--- a/whirlpool/Cargo.toml
+++ b/whirlpool/Cargo.toml
@@ -10,9 +10,7 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
-nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
-rand = "0.8"
+nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master" }
 rustfft = "6.1.0"
 
 [profile.release]
